Fix style on mobile and links

--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -1,9 +1,12 @@
-@media only screen and (max-width: 900px) and (-webkit-min-device-pixel-ratio: 1),
+@media only screen and (max-width: 1200px) and (-webkit-min-device-pixel-ratio: 1),
 only screen and (max-width: 1800px) and (-webkit-min-device-pixel-ratio: 2),
 only screen and (hover: none) and (pointer: coarse)
  {
+    body{
+    font-size:2vw;
+    }
     h1 {
-      font-size: 50px;
+      font-size : calc(var(--title-size)/2);
     }
     .menu {
         display: none;
@@ -14,10 +17,10 @@ only screen and (hover: none) and (pointer: coarse)
     }
     .page {
         margin-left:0px;
-        margin-top:60px;
+        margin-top:var(--menu-height);
     }
     .hero{
-        height: calc(100vh - 60px);
+        height: calc(100vh - var(--menu-height));
     }
     .slides{
         width:100%;
